tests/NormalTests/paczka1/small_fuzzy/85603576.err
Error in line 5: Sx6dyak1 S447 82,0
Error in line 3: Qx8NI6nOB5t S883 45,3
Error in line 1: pkMW S883 55,7
